# USBCamera

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg-lib.c
app/src/main/res/layout/: activity_1.xml  activity_2.xml  activity_3.xml  activity_main.xml
app/src/main/res/raw/: fragment_shader.glsl  fragment_shader_yuv.glsl  fragment_shader_yuyv422.glsl  vertex_shader.glsl
common/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
libusbcamera/: build.gradle
libusbcamera/src/main/: AndroidManifest.xml
pupilla/: CMakeLists.txt  build.gradle
pupilla/src/androidTest/java/com/shuyun/pupilla/: ExampleInstrumentedTest.java
pupilla/src/main/: AndroidManifest.xml
pupilla/src/main/cpp/: Android.mk  Application.mk  load.cpp
pupilla/src/main/cpp/libjpeg-turbo-1.5.0/: Android.mk
pupilla/src/main/cpp/libusb/android/: config.h
pupilla/src/main/cpp/libusb/android/jni/: libusb.mk
pupilla/src/main/cpp/libusb/libusb/: core.c  libusbi.h
pupilla/src/main/cpp/libuvc/android/jni/: Android.mk
pupilla/src/main/cpp/libuvc/include/libuvc/: libuvc.h  libuvc_config.h  libuvc_internal.h
pupilla/src/main/cpp/libuvc/src/: device_original.c  frame.c
pupilla/src/main/cpp/pupilla/: Android.mk  UVCCamera.cpp  UVCCamera.h  UVCPreview.cpp  UVCPreview.h  objectarray.h  pupilla.cpp  utilbase.cpp  utilbase.h
pupilla/src/main/java/com/shuyun/pupilla/: Pupilla.java
pupilla/src/main/res/values/: strings.xml
pupilla/src/test/java/com/shuyun/pupilla/: ExampleUnitTest.java
(+20 files in other folders)
